2004-02-08 Damien Sandras  <dsandras@seconix.com>

        * src/callbacks.cpp, src/callbacks.h, src/ldap_window.cpp,
        src/menu.cpp: Got rid of now unuseful gnomemeeting_component_view () 
        callback.

        * src/config.cpp: Several code cleanups for 1.00.

        * src/tray.h: Fixed typo in documentation.
        
2004-02-08 Kilian Krause <kk@verfaction.de>

	* gnomemeeting.desktop.in, gnomemeeting.schemas.in.in,
	src/callbacks.cpp, src/chat_window.cpp, src/codec_info.h,
	src/config.cpp, src/druid.cpp, src/ils.cpp, src/ldap_window.cpp,
	src/menu.cpp, src/pref_window.cpp, src/toolbar.cpp, src/tools.cpp: HIG
	string review. Patch provided by Fabrice Alphonso 
	<fabrice@alphonso.dyndns.org> and Josep Puigdemont <baldrick@terra.es>. 
	Thanks for your contribution!

2004-02-07 Damien Sandras  <dsandras@seconix.com>

	* src/ldap_window.cpp: Use the IP instead of the callto to call
	people so that there is less load on the server.
	
2004-02-07 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp, src/gnomemeeting.cpp: Make sure gnomemeeting
	doesn't crash if the user is doing stupid things with keys.
	
2004-02-07 Damien Sandras  <dsandras@seconix.com>

	* lib/gconf_widgets_extensions.c, lib/gconf_widgets_extensions.h:
	Added functions for floats.
	
	* src/gdkvideoio.cpp, src/menu.cpp: Fixed fullscreen mode and only
	automatically start in fullscreen mode if the gconf key tells to do it.

	* src/tools.cpp: Fixed spacings in the calls history to be more HIG 
	compliant.
	
2004-02-05 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Ignore forwarding on empty URLs.
	
2004-02-05 Damien Sandras  <dsandras@seconix.com>

	* src/tray.h: Fixed bug in previous commit. What happens with CVS?

2004-02-05 Damien Sandras  <dsandras@seconix.com>

	* src/tray.cpp, src/tray.h: Fixed bug in previous commit.
	
2004-02-05 Damien Sandras  <dsandras@seconix.com>

	* pixmaps/status-busy-16.png: Committed again.
	