@@ -734,7 +734,7 @@ gnomemeeting_pc_to_phone_window_new ()
 
   g_signal_connect_swapped (GTK_OBJECT (window), 
 			    "delete-event", 
-			    G_CALLBACK (gtk_widget_hide_on_delete),
+			    G_CALLBACK (gnomemeeting_window_hide),
 			    (gpointer) window);
   
   gtk_widget_show_all (GTK_WIDGET (GTK_DIALOG (window)->vbox));
