@@ -1,5 +1,10 @@
 2004-02-08 Damien Sandras  <dsandras@seconix.com>
 
+	* src/ldap_window.cpp, src/pref_window.cpp, src/tools.cpp: Code 
+	cleanups.
+	
+2004-02-08 Damien Sandras  <dsandras@seconix.com>
+
         * src/callbacks.cpp, src/callbacks.h, src/ldap_window.cpp,
         src/menu.cpp: Got rid of now unuseful gnomemeeting_component_view () 
         callback.
